--- a/arunx/src/main/resources/application.properties
+++ b/arunx/src/main/resources/application.properties
@@ -1,14 +1,40 @@
-##Server
+#===TOMCAT SERVER===============
 server.port=8000
+server.address=127.0.0.1
+server.error.whitelabel.enabled=false
+server.tomcat.accesslog.enabled=true
 
-
-##MySQL
+#===DATA SOURCE=================
 spring.datasource.url=jdbc:mysql://localhost:3306/arunx
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.max-active=5
+spring.datasource.tomcat.test-on-borrow=true
 
-spring.jpa.hibernate.ddl-auto=update
+# ===JPA / HIBERNATE=============
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-##endMySQL
+
+# ===============================
+# SMTP EMAIL
+# ===============================
+spring.mail.host = smtp.gmail.com
+spring.mail.username = aaronwolverinx@gmail.com
+spring.mail.password = rundream
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+# ===============================
+# = LOGGING
+# ===============================
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
